--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.1"
+    "http-status": "^1.7.3",
+    "lint-staged": "^15.1.0",
+    "mongoose": "^8.9.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@eslint/js": "^9.17.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -33,6 +38,7 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^8.0.0",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
     "ts-node-dev": "^2.0.0",
